force-app/main/default/objects/Currency_Conversion__c/Currency_Conversion__c.object-meta.xml
<CustomObject>
    <label>Currency Conversion</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Conversion Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Currency Conversions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>