force-app/main/default/objects/Currency_Conversion__c/fields/Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Date__c</fullName>
    <label>Conversion Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>