force-app/main/default/objects/Currency_Conversion__c/fields/Converted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Converted_Amount__c</fullName>
    <label>Converted Amount</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>