force-app/main/default/objects/Currency_Conversion__c/fields/Rate_Date__c.field-meta.xml
<CustomField>
    <fullName>Rate_Date__c</fullName>
    <label>Rate Date</label>
    <type>Date</type>
</CustomField>