force-app/main/default/objects/Currency_Conversion__c/fields/Rate_Provider__c.field-meta.xml
<CustomField>
    <fullName>Rate_Provider__c</fullName>
    <label>Rate Provider</label>
    <length>50</length>
    <type>Text</type>
</CustomField>