force-app/main/default/objects/Currency_Conversion__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Currency Conversions</relationshipLabel>
    <relationshipName>Currency_Conversions</relationshipName>
    <type>Lookup</type>
</CustomField>